# rialto-airflow

./: .gitignore  Dockerfile  Gemfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
config/: deploy.rb
config/deploy/: dev.rb
rialto_airflow/: utils.py
rialto_airflow/dags/: harvest.py  update_data.py
rialto_airflow/harvest/: contribs.py  dimensions.py  doi_set.py  doi_sunet.py  merge_pubs.py  openalex.py  sul_pub.py
rialto_airflow/utils/: __init__.py
test/: test_utils.py
test/data/: authors.csv  openalex-dois.csv
test/harvest/: test_contribs.py  test_dimensions.py  test_doi_set.py  test_doi_sunet.py  test_merge_pubs.py  test_openalex.py  test_sul_pub.py
