[project]
name = "rialto-airflow"
version = "0.1.0"
description = "Airflow app for harvesting data for open access analysis and research intelligence."
authors = [ {name = "Laura Wrubel", email = "lwrubel@stanford.edu"}, {name = "Ed Summers", email = "edsu@stanford.edu"}]
requires-python = ">= 3.12"
dependencies = [
    "pandas",
    "requests",
    "python-dotenv"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
